--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,6 @@ before_script:
 script:
     - 'if [[ -z $TEST_SUITE ]]; then sleep 10; python setup.py test; return $?; fi'
     - 'if [[ $TEST_SUITE == flake ]]; then flake8; return $?; fi'
-    - 'if [[ $TEST_SUITE == build_sphinx ]]; then python setup.py build_sphinx; return $?; fi'
+    - 'if [[ $TEST_SUITE == build_sphinx ]]; then pip install ".[doc]" && python setup.py build_sphinx; return $?; fi'
 
 cache: pip
